# no_flecs_with

./: Cargo.toml
src/: lib.rs
ui/: main.rs  main.stderr
