[package]
name = "no_flecs_with"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy" , rev = "6a3ef9349213727b47e61aa74cf0627b87c7f08a"}
dylint_linting = "3.2.1"

[dev-dependencies]
dylint_testing = "3.2.1"

[package.metadata.rust-analyzer]
rustc_private = true

